# rag

./: .gitignore  README.md
poc/: .gitignore  pyproject.toml
poc/src/: embed.py  similarity.py
sec-emb/: .env.example  .gitignore  PLAN.md  pyproject.toml
sec-emb/src/: agent.py  ask.py  chunking.py  config.py  index.py  ingest.py  prompts.py  search.py  tools.py  walker.py
sec-emb/tests/: eval.py  eval_set.json  smoke_anthropic.py  smoke_model.py
